--- a/GoList/res/values/strings.xml
+++ b/GoList/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">GoList</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="login">Login</string>
+    <string name="name">Name</string>
+    <string name="password">Password</string>
+    <string name="newacc">Create New Account</string>
+    <string name="register">Register</string>
+    <string name="repeatpassword">Repeat Password</string>
 
 </resources>
