--- a/GoList/res/values/strings.xml
+++ b/GoList/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="repeatpassword">Repeat Password</string>
     <string name="url">http://golist.cwsurf.de/</string>
     <string name="newitem">New Item</string>
+    <string name="edititem">Edit Item</string>
+    <string name="delete">Delete</string>
     <string name="save">Save</string>
     <string name="amount">Amount</string>
     <string name="description">Description</string>
@@ -21,6 +23,22 @@
     <string name="search">Search</string>
     <string name="list">List</string>
     <string name="additem">Add Item</string>
+    <string name="adduser">Add User</string>
+    <string name="editlist">Edit List</string>
     <string name="mylists">My Lists</string>
     <string name="createnewlist">Create New List</string>
+    <string name="deleteitemquestion">Are you sure you want to delete this Item?</string>
+    <string name="deleteitemtitle">Delete Item</string>
+    <string name="deletelistquestion">This list and all items in it will be deleted!\nAre you sure you want to do this?</string>
+    <string name="deletelisttitle">Delete List</string>
+    <string name="deleteuserquestion">Do you want to kick this user out of the list?</string>
+    <string name="deleteusertitle">Delete User</string>
+    <string name="edit">Edit</string>
+    <string name="removeauser">Remove a user</string>
+    <string name="deleteallitems">Delete all items</string>
+    <string name="importitems">Import items from another List</string>
+    <string name="markitemsbought">Mark all items as bought</string>
+    <string name="markitemsunbought">Mark all items as unbought</string>
+    <string name="showmembers">Show Members</string>
+    <string name="members">Members</string>
 </resources>
