LIST-48: Code Refactoring
Task-Url: http://jira.it.dh-karlsruhe.de:8080/browse/LIST-48

--- a/GoList/res/values/strings.xml
+++ b/GoList/res/values/strings.xml
@@ -87,6 +87,41 @@
     <string name="answerinvitationquestion">Do you want to join this list?</string>
     <string name="infofromnfc">username imported itemname from nfc tag</string> 
     <string name="createalist">Create a Shoppinglist!</string>
+    <string name="invitationremoved">Invitation removed!</string>
+    <string name="errorinvitationnotexisting">Error: Invitation does not exist anymore!</string>
+    <string name="failedtoloadlist">Failed to load list!</string>
+    <string name="invitationaccepted">Invitation accepted!</string>
+    <string name="connectionerror">Error: Can\'t connect to Server!</string>  
+    <string name="insertnewname">Please insert a new name!</string>     
+    <string name="insertname">Please insert a name!</string>     
+    <string name="listupdated">List updated!</string>     
+    <string name="errorpasswordtooshort">Error: Password too short!</string>     
+    <string name="errornameorpasswordtooshort">Error: Name or Password too short!</string>     
+    <string name="errorpasswordsnomatch">Error: Passwords do not match!</string>   
+    <string name="error">Error</string>    
+    <string name="passwordchanged">Password changed</string>    
+    <string name="_items"> Items</string>    
+    <string name="created"> created!</string>
+    <string name="errorenterpassword">Error: Please enter your Password!</string>
+    <string name="accountdeleted">Account deleted!</string>
+    <string name="errordeletelistfailed">Error: Failed to delete List!</string>
+    <string name="listdeleted">List deleted!</string>
+    <string name="lasteditby">Last edited by </string>
+    <string name="_invited"> invited!</string>
+    <string name="invited">Invited</string>
+    <string name="inviteuser">Invite User</string>
+    <string name="failedtoupdatelist">Failed to update List!</string>
+    <string name="history">History</string>
+    <string name="items">Items</string>
+    <string name="leavelist">Leave List</string>
+    <string name="errorincorrectdata">Error: Incorrect Data!</string>
+    <string name="errorloginfailed">Error: Login failed!</string>
+    <string name="enternamepassword">Please enter a name and a password!</string>
+    <string name="favoriteitems">Favorite Items</string>
+    <string name="logout">Logout</string>
+    <string name="accountcreated">Account created!</string>
+    <string name="itemremoved">Item removed!</string>
+    <string name="saveditemontag">Saved Item on Tag!</string>
     
     <string-array name="category_icons">
         <item>@drawable/cheese</item>
