Layout und Design verbessert

--- a/GoList/res/values-de/strings.xml
+++ b/GoList/res/values-de/strings.xml
@@ -40,7 +40,7 @@
     <string name="markallitemsboughtquestion">Sind Sie sicher, dass Sie alle Artikel als gekauft markieren wollen?</string>
     <string name="leavelistquestion">Sind Sie sicher, dass Sie diese Liste verlassen wollen?</string>
     <string name="deleteallitemsquestion">Sind Sie sicher, dass Sie alle Artikel löschen möchten?</string>
-    <string name="deletelistquestion">Diese Liste und alle enthaltenen Artikel werden gelöscht!\nSind Sie sich sicher, dass sie dies tun möchten?</string>
+    <string name="deletelistquestion">Diese Liste und alle enthaltenen Artikel werden gelöscht!\nSind Sie sich sicher, dass Sie dies tun möchten?</string>
     <string name="deleteuserquestion">Wollen Sie diesen Nutzer aus der Liste entfernen?</string>
     <string name="edit">Bearbeiten</string>
     <string name="removeauser">Nutzer entfernen</string>
@@ -52,7 +52,7 @@
     <string name="members">Mitglieder</string>
     <string name="empty">Diese Liste ist leer.</string>
     <string name="title">Titel</string>
-    <string name="changename">Namen ändern</string>
+    <string name="changename">Name ändern</string>
     <string name="deleteboughtitems">Gekaufte Artikel löschen</string>
     <string name="infoitemcreated">username hat itemname zu listname hinzugefügt</string>
     <string name="infoitemedited">username hat itemname bearbeitet</string>
@@ -84,9 +84,42 @@
     <string name="yes">Ja</string>
     <string name="no">Nein</string>    
     <string name="deleteitemtitle">Artikel löschen</string>
-    <string name="answerinvitationquestion">Wollen sie dieser Liste beitreten?</string>
+    <string name="answerinvitationquestion">Wollen Sie dieser Liste beitreten?</string>
     <string name="infofromnfc">username hat itemname von nfc tag importiert</string> 
     <string name="createalist">Einkaufsliste erstellen!</string>
+    <string name="invitationremoved">Einladung abgelehnt!</string>
+    <string name="errorinvitationnotexisting">Fehler: Die Einladung existiert nicht mehr!</string>
+    <string name="failedtoloadlist">Laden der Liste fehlgeschlagen!</string>
+    <string name="invitationaccepted">Einladung angenommen!</string>
+    <string name="connectionerror">Fehler: Verbindung zum Server nicht möglich!</string>  
+    <string name="insertnewname">Bitte geben Sie einen neuen Namen ein!</string>     
+    <string name="insertname">Bitte geben Sie einen Namen ein!</string>     
+    <string name="listupdated">Liste aktualisiert!</string>     
+    <string name="errorpasswordtooshort">Fehler: Passwort zu kurz!</string>     
+    <string name="errornameorpasswordtooshort">Fehler: Name oder Passwort ist zu kurz!</string>     
+    <string name="errorpasswordsnomatch">Fehler: Die Passwörter stimmen nicht überein!</string>   
+    <string name="error">Fehler</string>    
+    <string name="passwordchanged">Passwort geändert</string>
+    <string name="created">erstellt!</string>
+    <string name="errorenterpassword">Fehler: Bitte geben Sie ihr Passwort ein!</string>
+    <string name="accountdeleted">Account gelöscht!</string>
+    <string name="errordeletelistfailed">Fehler: Löschen der Liste fehlgeschlagen!</string>
+    <string name="listdeleted">Liste gelöscht!</string>
+    <string name="lasteditby">Zuletzt bearbeitet von </string>
+    <string name="invited">Eingeladen</string>
+    <string name="inviteuser">Nutzer einladen</string>
+    <string name="failedtoupdatelist">Aktualisieren der Liste fehlgeschlagen!</string>
+    <string name="history">Verlauf</string>
+    <string name="items">Artikel</string>
+    <string name="leavelist">Liste verlassen</string>
+    <string name="errorincorrectdata">Fehler: Daten können nicht gelesen werden!</string>
+    <string name="errorloginfailed">Fehler: Login fehlgeschlagen</string>
+    <string name="enternamepassword">Bitte geben Sie einen Namen und ein Passwort ein!</string>
+    <string name="favoriteitems">Favoriten</string>
+    <string name="logout">Logout</string>
+    <string name="accountcreated">Account erstellt!</string>
+    <string name="itemremoved">Artikel entfernt!</string>
+    <string name="saveditemontag">Artikel auf NFC Tag gespeichert!</string>
     
     <string-array name="category_icons">
         <item>@drawable/cheese</item>
